// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonTests Buttons can be disabled 1`] = `
{
  "AutomationId": "disabled_button",
  "AutomationLevel": -1,
  "AutomationPositionInSet": -1,
  "AutomationSizeOfSet": -1,
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 38,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": [
    {
      "AutomationLevel": -1,
      "AutomationPositionInSet": -1,
      "AutomationSizeOfSet": -1,
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": [
        {
          "AutomationLevel": -1,
          "AutomationPositionInSet": -1,
          "AutomationSizeOfSet": -1,
          "Background": "#00FFFFFF",
          "BorderBrush": "#E4000000",
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "3,3,3,3",
          "FlowDirection": "LeftToRight",
          "Height": 38,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "AutomationLevel": -1,
              "AutomationPositionInSet": -1,
              "AutomationSizeOfSet": -1,
              "Background": "#4DF9F9F9",
              "BorderBrush": "#0F000000",
              "BorderThickness": "1,1,1,1.5",
              "Clip": null,
              "CornerRadius": "3,3,3,3",
              "FlowDirection": "LeftToRight",
              "Height": 38,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "AutomationLevel": -1,
                  "AutomationPositionInSet": -1,
                  "AutomationSizeOfSet": -1,
                  "Background": null,
                  "BorderBrush": "#E4000000",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Height": 35,
                  "HorizontalAlignment": "Stretch",
                  "Left": 1,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 1,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 716,
                  "XamlType": "Microsoft.ReactNative.ViewPanel",
                  "children": [
                    {
                      "AutomationLevel": -1,
                      "AutomationPositionInSet": -1,
                      "AutomationSizeOfSet": -1,
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#5C000000",
                      "Height": 19,
                      "HorizontalAlignment": "Stretch",
                      "Left": 8,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Text": "Submit Application",
                      "Top": 8,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 700,
                      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`ButtonTests Buttons can have accessibility labels 1`] = `
{
  "AutomationId": "accessibilityLabel_button",
  "AutomationLevel": -1,
  "AutomationPositionInSet": -1,
  "AutomationSizeOfSet": -1,
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 37,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": [
    {
      "AutomationLevel": -1,
      "AutomationPositionInSet": -1,
      "AutomationSizeOfSet": -1,
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": [
        {
          "AutomationLevel": -1,
          "AutomationPositionInSet": -1,
          "AutomationSizeOfSet": -1,
          "Background": "#00FFFFFF",
          "BorderBrush": "#E4000000",
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "3,3,3,3",
          "FlowDirection": "LeftToRight",
          "Height": 37,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "AutomationLevel": -1,
              "AutomationPositionInSet": -1,
              "AutomationSizeOfSet": -1,
              "Background": "#FF007AFF",
              "BorderBrush": "Windows.UI.Xaml.Media.LinearGradientBrush",
              "BorderThickness": "1,1,1,1.5",
              "Clip": null,
              "CornerRadius": "3,3,3,3",
              "FlowDirection": "LeftToRight",
              "Height": 37,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "AutomationLevel": -1,
                  "AutomationPositionInSet": -1,
                  "AutomationSizeOfSet": -1,
                  "Background": null,
                  "BorderBrush": "#E4000000",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Height": 35,
                  "HorizontalAlignment": "Stretch",
                  "Left": 1,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 1,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 716,
                  "XamlType": "Microsoft.ReactNative.ViewPanel",
                  "children": [
                    {
                      "AutomationLevel": -1,
                      "AutomationPositionInSet": -1,
                      "AutomationSizeOfSet": -1,
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#E4000000",
                      "Height": 19,
                      "HorizontalAlignment": "Stretch",
                      "Left": 8,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Text": "Submit Application",
                      "Top": 8,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 700,
                      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`ButtonTests Buttons can have accessibility props 1`] = `
{
  "AutomationId": "accessibility_props",
  "AutomationLevel": -1,
  "AutomationPositionInSet": -1,
  "AutomationSizeOfSet": -1,
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 37,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": [
    {
      "AutomationLevel": -1,
      "AutomationPositionInSet": -1,
      "AutomationSizeOfSet": -1,
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": [
        {
          "AutomationLevel": -1,
          "AutomationPositionInSet": -1,
          "AutomationSizeOfSet": -1,
          "Background": "#B3FFFFFF",
          "BorderBrush": "Windows.UI.Xaml.Media.LinearGradientBrush",
          "BorderThickness": "1,1,1,1.5",
          "Clip": null,
          "CornerRadius": "3,3,3,3",
          "FlowDirection": "LeftToRight",
          "Height": 37,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "AutomationLevel": -1,
              "AutomationPositionInSet": -1,
              "AutomationSizeOfSet": -1,
              "Background": null,
              "BorderBrush": "#E4000000",
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Height": 35,
              "HorizontalAlignment": "Stretch",
              "Left": 1,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 1,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 716,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "AutomationLevel": -1,
                  "AutomationPositionInSet": -1,
                  "AutomationSizeOfSet": -1,
                  "Background": null,
                  "BorderBrush": "#E4000000",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Height": 35,
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 716,
                  "XamlType": "Microsoft.ReactNative.ViewPanel",
                  "children": [
                    {
                      "AutomationLevel": -1,
                      "AutomationPositionInSet": -1,
                      "AutomationSizeOfSet": -1,
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#E4000000",
                      "Height": 19,
                      "HorizontalAlignment": "Stretch",
                      "Left": 8,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Text": "Submit Application",
                      "Top": 8,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 700,
                      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`ButtonTests Buttons can have accessibility states 1`] = `
{
  "AutomationId": "accessibilityState_button",
  "AutomationLevel": -1,
  "AutomationPositionInSet": -1,
  "AutomationSizeOfSet": -1,
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 38,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": [
    {
      "AutomationLevel": -1,
      "AutomationPositionInSet": -1,
      "AutomationSizeOfSet": -1,
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": [
        {
          "AutomationLevel": -1,
          "AutomationPositionInSet": -1,
          "AutomationSizeOfSet": -1,
          "Background": "#00FFFFFF",
          "BorderBrush": "#E4000000",
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "3,3,3,3",
          "FlowDirection": "LeftToRight",
          "Height": 38,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "AutomationLevel": -1,
              "AutomationPositionInSet": -1,
              "AutomationSizeOfSet": -1,
              "Background": "#4DF9F9F9",
              "BorderBrush": "#0F000000",
              "BorderThickness": "1,1,1,1.5",
              "Clip": null,
              "CornerRadius": "3,3,3,3",
              "FlowDirection": "LeftToRight",
              "Height": 38,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "AutomationLevel": -1,
                  "AutomationPositionInSet": -1,
                  "AutomationSizeOfSet": -1,
                  "Background": null,
                  "BorderBrush": "#E4000000",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Height": 35,
                  "HorizontalAlignment": "Stretch",
                  "Left": 1,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 1,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 716,
                  "XamlType": "Microsoft.ReactNative.ViewPanel",
                  "children": [
                    {
                      "AutomationLevel": -1,
                      "AutomationPositionInSet": -1,
                      "AutomationSizeOfSet": -1,
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#5C000000",
                      "Height": 19,
                      "HorizontalAlignment": "Stretch",
                      "Left": 8,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Text": "Submit Application",
                      "Top": 8,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 700,
                      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`ButtonTests Buttons can have custom colors 1`] = `
{
  "AutomationId": "cancel_button",
  "AutomationLevel": -1,
  "AutomationPositionInSet": -1,
  "AutomationSizeOfSet": -1,
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 37,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": [
    {
      "AutomationLevel": -1,
      "AutomationPositionInSet": -1,
      "AutomationSizeOfSet": -1,
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": [
        {
          "AutomationLevel": -1,
          "AutomationPositionInSet": -1,
          "AutomationSizeOfSet": -1,
          "Background": "#00FFFFFF",
          "BorderBrush": "#E4000000",
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "3,3,3,3",
          "FlowDirection": "LeftToRight",
          "Height": 37,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "AutomationLevel": -1,
              "AutomationPositionInSet": -1,
              "AutomationSizeOfSet": -1,
              "Background": "#FFFF3B30",
              "BorderBrush": "Windows.UI.Xaml.Media.LinearGradientBrush",
              "BorderThickness": "1,1,1,1.5",
              "Clip": null,
              "CornerRadius": "3,3,3,3",
              "FlowDirection": "LeftToRight",
              "Height": 37,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "AutomationLevel": -1,
                  "AutomationPositionInSet": -1,
                  "AutomationSizeOfSet": -1,
                  "Background": null,
                  "BorderBrush": "#E4000000",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Height": 35,
                  "HorizontalAlignment": "Stretch",
                  "Left": 1,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 1,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 716,
                  "XamlType": "Microsoft.ReactNative.ViewPanel",
                  "children": [
                    {
                      "AutomationLevel": -1,
                      "AutomationPositionInSet": -1,
                      "AutomationSizeOfSet": -1,
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#E4000000",
                      "Height": 19,
                      "HorizontalAlignment": "Stretch",
                      "Left": 8,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Text": "Cancel Application",
                      "Top": 8,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 700,
                      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`ButtonTests Buttons can have their accessibility and keyboard focus disabled 1`] = `
{
  "AutomationId": "accessible_focusable_button",
  "AutomationLevel": -1,
  "AutomationPositionInSet": -1,
  "AutomationSizeOfSet": -1,
  "Background": null,
  "BorderBrush": "#E4000000",
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Height": 150,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewPanel",
  "children": [
    {
      "AutomationId": "accessibility_props",
      "AutomationLevel": -1,
      "AutomationPositionInSet": -1,
      "AutomationSizeOfSet": -1,
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 38,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Microsoft.ReactNative.ViewControl",
      "children": [
        {
          "AutomationLevel": -1,
          "AutomationPositionInSet": -1,
          "AutomationSizeOfSet": -1,
          "Background": null,
          "BorderBrush": null,
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
          "children": [
            {
              "AutomationLevel": -1,
              "AutomationPositionInSet": -1,
              "AutomationSizeOfSet": -1,
              "Background": "#B3FFFFFF",
              "BorderBrush": "Windows.UI.Xaml.Media.LinearGradientBrush",
              "BorderThickness": "1,1,1,1.5",
              "Clip": null,
              "CornerRadius": "3,3,3,3",
              "FlowDirection": "LeftToRight",
              "Height": 38,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "AutomationLevel": -1,
                  "AutomationPositionInSet": -1,
                  "AutomationSizeOfSet": -1,
                  "Background": null,
                  "BorderBrush": "#E4000000",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Height": 35,
                  "HorizontalAlignment": "Stretch",
                  "Left": 1,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 1,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 716,
                  "XamlType": "Microsoft.ReactNative.ViewPanel",
                  "children": [
                    {
                      "AutomationLevel": -1,
                      "AutomationPositionInSet": -1,
                      "AutomationSizeOfSet": -1,
                      "Background": null,
                      "BorderBrush": "#E4000000",
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Height": 35,
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 716,
                      "XamlType": "Microsoft.ReactNative.ViewPanel",
                      "children": [
                        {
                          "AutomationLevel": -1,
                          "AutomationPositionInSet": -1,
                          "AutomationSizeOfSet": -1,
                          "Clip": null,
                          "FlowDirection": "LeftToRight",
                          "Foreground": "#E4000000",
                          "Height": 19,
                          "HorizontalAlignment": "Stretch",
                          "Left": 8,
                          "Margin": "0,0,0,0",
                          "Padding": "0,0,0,0",
                          "Text": "Default Button",
                          "Top": 8,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "Width": 700,
                          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    {
      "AutomationId": "accessibility_props",
      "AutomationLevel": -1,
      "AutomationPositionInSet": -1,
      "AutomationSizeOfSet": -1,
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 37,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 38,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Microsoft.ReactNative.ViewControl",
      "children": [
        {
          "AutomationLevel": -1,
          "AutomationPositionInSet": -1,
          "AutomationSizeOfSet": -1,
          "Background": null,
          "BorderBrush": null,
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
          "children": [
            {
              "AutomationLevel": -1,
              "AutomationPositionInSet": -1,
              "AutomationSizeOfSet": -1,
              "Background": "#B3FFFFFF",
              "BorderBrush": "Windows.UI.Xaml.Media.LinearGradientBrush",
              "BorderThickness": "1,1,1,1.5",
              "Clip": null,
              "CornerRadius": "3,3,3,3",
              "FlowDirection": "LeftToRight",
              "Height": 37,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "AutomationLevel": -1,
                  "AutomationPositionInSet": -1,
                  "AutomationSizeOfSet": -1,
                  "Background": null,
                  "BorderBrush": "#E4000000",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Height": 35,
                  "HorizontalAlignment": "Stretch",
                  "Left": 1,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 1,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 716,
                  "XamlType": "Microsoft.ReactNative.ViewPanel",
                  "children": [
                    {
                      "AutomationLevel": -1,
                      "AutomationPositionInSet": -1,
                      "AutomationSizeOfSet": -1,
                      "Background": null,
                      "BorderBrush": "#E4000000",
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Height": 35,
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 716,
                      "XamlType": "Microsoft.ReactNative.ViewPanel",
                      "children": [
                        {
                          "AutomationLevel": -1,
                          "AutomationPositionInSet": -1,
                          "AutomationSizeOfSet": -1,
                          "Clip": null,
                          "FlowDirection": "LeftToRight",
                          "Foreground": "#E4000000",
                          "Height": 19,
                          "HorizontalAlignment": "Stretch",
                          "Left": 8,
                          "Margin": "0,0,0,0",
                          "Padding": "0,0,0,0",
                          "Text": "Button with accessible=false",
                          "Top": 8,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "Width": 700,
                          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    {
      "AutomationId": "accessibility_props",
      "AutomationLevel": -1,
      "AutomationPositionInSet": -1,
      "AutomationSizeOfSet": -1,
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 38,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 75,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Microsoft.ReactNative.ViewControl",
      "children": [
        {
          "AutomationLevel": -1,
          "AutomationPositionInSet": -1,
          "AutomationSizeOfSet": -1,
          "Background": null,
          "BorderBrush": null,
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
          "children": [
            {
              "AutomationLevel": -1,
              "AutomationPositionInSet": -1,
              "AutomationSizeOfSet": -1,
              "Background": "#B3FFFFFF",
              "BorderBrush": "Windows.UI.Xaml.Media.LinearGradientBrush",
              "BorderThickness": "1,1,1,1.5",
              "Clip": null,
              "CornerRadius": "3,3,3,3",
              "FlowDirection": "LeftToRight",
              "Height": 38,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "AutomationLevel": -1,
                  "AutomationPositionInSet": -1,
                  "AutomationSizeOfSet": -1,
                  "Background": null,
                  "BorderBrush": "#E4000000",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Height": 35,
                  "HorizontalAlignment": "Stretch",
                  "Left": 1,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 1,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 716,
                  "XamlType": "Microsoft.ReactNative.ViewPanel",
                  "children": [
                    {
                      "AutomationLevel": -1,
                      "AutomationPositionInSet": -1,
                      "AutomationSizeOfSet": -1,
                      "Background": null,
                      "BorderBrush": "#E4000000",
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Height": 35,
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 716,
                      "XamlType": "Microsoft.ReactNative.ViewPanel",
                      "children": [
                        {
                          "AutomationLevel": -1,
                          "AutomationPositionInSet": -1,
                          "AutomationSizeOfSet": -1,
                          "Clip": null,
                          "FlowDirection": "LeftToRight",
                          "Foreground": "#E4000000",
                          "Height": 19,
                          "HorizontalAlignment": "Stretch",
                          "Left": 8,
                          "Margin": "0,0,0,0",
                          "Padding": "0,0,0,0",
                          "Text": "Button with focusable=false",
                          "Top": 8,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "Width": 700,
                          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    {
      "AutomationId": "accessibility_props",
      "AutomationLevel": -1,
      "AutomationPositionInSet": -1,
      "AutomationSizeOfSet": -1,
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 37,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 113,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Microsoft.ReactNative.ViewControl",
      "children": [
        {
          "AutomationLevel": -1,
          "AutomationPositionInSet": -1,
          "AutomationSizeOfSet": -1,
          "Background": null,
          "BorderBrush": null,
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
          "children": [
            {
              "AutomationLevel": -1,
              "AutomationPositionInSet": -1,
              "AutomationSizeOfSet": -1,
              "Background": "#B3FFFFFF",
              "BorderBrush": "Windows.UI.Xaml.Media.LinearGradientBrush",
              "BorderThickness": "1,1,1,1.5",
              "Clip": null,
              "CornerRadius": "3,3,3,3",
              "FlowDirection": "LeftToRight",
              "Height": 37,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "AutomationLevel": -1,
                  "AutomationPositionInSet": -1,
                  "AutomationSizeOfSet": -1,
                  "Background": null,
                  "BorderBrush": "#E4000000",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Height": 35,
                  "HorizontalAlignment": "Stretch",
                  "Left": 1,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 1,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 716,
                  "XamlType": "Microsoft.ReactNative.ViewPanel",
                  "children": [
                    {
                      "AutomationLevel": -1,
                      "AutomationPositionInSet": -1,
                      "AutomationSizeOfSet": -1,
                      "Background": null,
                      "BorderBrush": "#E4000000",
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Height": 35,
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 716,
                      "XamlType": "Microsoft.ReactNative.ViewPanel",
                      "children": [
                        {
                          "AutomationLevel": -1,
                          "AutomationPositionInSet": -1,
                          "AutomationSizeOfSet": -1,
                          "Clip": null,
                          "FlowDirection": "LeftToRight",
                          "Foreground": "#E4000000",
                          "Height": 19,
                          "HorizontalAlignment": "Stretch",
                          "Left": 8,
                          "Margin": "0,0,0,0",
                          "Padding": "0,0,0,0",
                          "Text": "Button with accessible=false and focusable=false",
                          "Top": 8,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "Width": 700,
                          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`ButtonTests Buttons have default styling 1`] = `
{
  "AutomationId": "button_default_styling",
  "AutomationLevel": -1,
  "AutomationPositionInSet": -1,
  "AutomationSizeOfSet": -1,
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 38,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": [
    {
      "AutomationLevel": -1,
      "AutomationPositionInSet": -1,
      "AutomationSizeOfSet": -1,
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": [
        {
          "AutomationLevel": -1,
          "AutomationPositionInSet": -1,
          "AutomationSizeOfSet": -1,
          "Background": "#B3FFFFFF",
          "BorderBrush": "Windows.UI.Xaml.Media.LinearGradientBrush",
          "BorderThickness": "1,1,1,1.5",
          "Clip": null,
          "CornerRadius": "3,3,3,3",
          "FlowDirection": "LeftToRight",
          "Height": 38,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "AutomationLevel": -1,
              "AutomationPositionInSet": -1,
              "AutomationSizeOfSet": -1,
              "Background": null,
              "BorderBrush": "#E4000000",
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Height": 35,
              "HorizontalAlignment": "Stretch",
              "Left": 1,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 1,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 716,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "AutomationLevel": -1,
                  "AutomationPositionInSet": -1,
                  "AutomationSizeOfSet": -1,
                  "Background": null,
                  "BorderBrush": "#E4000000",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Height": 35,
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 716,
                  "XamlType": "Microsoft.ReactNative.ViewPanel",
                  "children": [
                    {
                      "AutomationLevel": -1,
                      "AutomationPositionInSet": -1,
                      "AutomationSizeOfSet": -1,
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#E4000000",
                      "Height": 19,
                      "HorizontalAlignment": "Stretch",
                      "Left": 8,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Text": "Submit Application",
                      "Top": 8,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 700,
                      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;
